<resources>
    <string name="app_name">Tel</string>
    <string name="TextoIntro1">
        Compartilhe e explore
        conhecimentos técnicos com a
        comunidade de telecomunicações.

    </string>
    <string name="TextoIntro2">
        Através de publicações de
        soluções técnicas.
    </string>

    <string name="loading">
        Aguarde
    </string>

    <string name="TextoIntro3">
        Fique conhecido, quanto
        mais publicações fizer
        mais chance terá de ficar popular
        na comunidade de telecomunicações.
    </string>


    <string name="palavraChaveVazio">Campo Palavra Chave Vazio!</string>
    <string name="descricaoVazio">Campo Descrição vazio!</string>
    <string name="tituloVazio">Campo Titulo vazio!</string>
    <string name="tiposolucaoVazio">Campo Tipo da Solução vazio!</string>
    <string name="tiposolucao">Tipo da Solucao</string>
    <string name="usuarioNull">Nenhum Usuario logado</string>
    <string name="diretorio">Tel</string>
    <string name="numeroCurtidas">2.254</string>
    <string name="numeroNaoCurtidas">231</string>
    <string name="texto_da_solucao">Area para escrita da solução</string>
    <string name="palavraChave">Digite uma palavra chave</string>
    <string name="TituloSolucao">Titulo</string>
    <string name="solucao">Descreva sua solução</string>
    <string name="conta">Conta usuário</string>
    <string name="falhaAoDeletarConta">Falha ao tentar excluir a conta</string>
    <string name="contaExcluidaMensagem">Conta excluida</string>
    <string name="falhaAoSair">Falha ao tentar sair</string>
    <string name="deletarContaMensagem">Você realmente deseja deletar esta conta?</string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="nomeCompletoVazio">Campo Nome Completo vazio!</string>
    <string name="atencao">Atenção</string>
    <string name="okTitulo">Ok!</string>
    <string name="processandoTitulo">Processando</string>
    <string name="aguardeTitulo">Aguarde..</string>
    <string name="aguardeMensagem">Aguarde</string>
    <string name="senhaCurtaMensagem">Senha deve conter no minimo 6 caractere</string>
    <string name="senhaCurtaTitulo">Senha muito curta</string>
    <string name="tentenovamente">Tente novamente</string>
    <string name="estamosuploadImagem">Estamos salvando a imagem escolhida</string>
    <string name="senha_email_incorretoTitulo">Senha ou email incorreto!</string>
    <string name="entreComEmailMensagem">Campo email vazio!</string>
    <string name="entreComEmailRegistro">Entre com um endereço de email, ao qual irá registrar a conta!</string>
    <string name="entreComSenhaTitulo">Campo senha vazio!</string>
    <string name="aguarde_registro_conta">Por favor aguarde, estamos criado sua conta...</string>
    <string name="conta_criada_sucesso">Conta criada com sucesso!</string>
    <string name="entreComUmNome">Digite seu nome!</string>
    <string name="email">Email</string>
    <string name="minimum_password">Senha muito curta, entre no minimo com 6 caracteres!</string>
    <string name="falhaEnviarEmailResetTitulo">Falha!</string>
    <string name="falhaEnviarEmailResetMensagem">Certifique que o endereço de email foi digitado correto</string>
    <string name="falhaAutenticacaoTitulo">Falha na autênticação</string>
    <string name="falhaAoSalvarImagem">Falha ao salvar imagem</string>
    <string name="falhaAutenticacaoMensagem">Verifique o endereço de email e senha digitado e tente novamente</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="emailEnviado_resetSenha">Enviamos um email com as instruções para o reset de sua senha!</string>
    <string name="enviar_email_de_resetSenha"> Falha ao tentar enviar email de reset de senha! Check o email inserido!</string>
    <string name="email_registro_de_conta">Entre com o email que registrou sua conta!</string>
    <string name="esqueceu_senha_msg">Nós só precisamos do seu e-mail cadastrado para enviar-lhe instruções de redefinição de senha </string>
    <string name="por">Por </string>
    <string name="nomeNeymar">Neymar Junior</string>
    <string name="data">23/11/2016</string>
    <string name="equipo">Equipamento</string>
    <string name="acesso">Acesso</string>
    <string name="infra">Infraestrutura</string>
    <string name="editConta">Editar Conta</string>
    <string name="apagConta">Apagar Conta</string>

    <!-- Strings para o exemplo do Material design-->

    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
        asdaafasdfkas´d,fioka,´pfio,a´pdiokf,.asdasdfopasdif,asoasdfdsfíasd
    dkjf´pasodf´pasidfaksdfpiaksdf
    aopsdkfápsoikfpasdkfp,´,kc9i qwe-,i piwe9 e fsdf as
    [sdfo a´sod foji djf adsofk mads fd
    paos´dpof sdakf lnjadsf jid fk asdf as
    asdfasodf

    odjsfl dnasmenht
    jggleijesson
    nascimento
    gloeisoin
    nascimento
    gleisson nasciment


    Gleisson Nascimernto
    Gleisson Nascimento
    Gleisson NASCIMENTO
    Gleisson Nascinet
    Gleisson Nasimenyto
    Gleisson Nascimento
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>


</resources>
