<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/android.branco"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/imagemDetalheSolucao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:background="@drawable/a"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarDetalheCard"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="@dimen/md_keylines"
            android:paddingTop="@dimen/md_keylines">

            <TextView
                android:id="@+id/tituloSolucaoDetalhe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:text="@string/TituloSolucao"
                android:textColor="@color/android.preto"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                android:id="@+id/descricaoSolucaoDetalhe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_da_solucao"/>

            <LinearLayout
                android:id="@+id/layout_curtir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/titular_da_solucao"
                android:layout_margin="@dimen/espaco_de_8"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/button_curtir"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/cards_button_height"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/curtir_paddin15"/>

                <TextView
                    android:id="@+id/numero_curtidas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:text="@string/numeroCurtidas"
                    android:textColor="@color/android.preto"/>

                <ImageButton
                    android:id="@+id/button_nao_curtir"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/cards_button_height"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@mipmap/nao_curtir_padding15"/>


                <TextView
                    android:id="@+id/text_nao_curtir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_weight="1"
                    android:text="@string/numeroNaoCurtidas"
                    android:textColor="@color/android.preto"/>

            </LinearLayout>


            <TextView
                android:id="@+id/linhaDetalhe"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/espaco_de_16"
                android:background="@color/android.corAcentuada"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/espaco_de_16">

                     <ImageView
                      android:id="@+id/personDetalheView"
                      android:layout_width="70dp"
                      android:layout_height="50dp"
                      android:layout_marginTop="@dimen/espaco_de_8"
                      android:scaleType="centerCrop"
                      android:src="@drawable/ic_person_black_24dp"/>

                  <TextView
                      android:id="@+id/textPorAutorViewDetalhe"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="@dimen/espaco_de_16"
                      android:layout_marginTop="@dimen/espaco_de_16"
                      android:layout_toRightOf="@id/personDetalheView"
                      android:text="@string/por"/>



                <TextView
                    android:id="@+id/nomeAutorViewDetalhe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/espaco_de_8"
                    android:layout_marginTop="@dimen/espaco_de_16"
                    android:layout_toRightOf="@id/textPorAutorViewDetalhe"
                    android:text="@string/nomeNeymar"/>

                <TextView
                    android:id="@+id/dataAutorViewDetalhe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textPorAutorViewDetalhe"
                    android:layout_toRightOf="@+id/personDetalheView"
                    android:layout_marginLeft="@dimen/espaco_de_16"
                    android:layout_marginTop="@dimen/espaco_de_4"
                    android:text="@string/data"/>


            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>


