<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context="com.tel.gleisson.android.tel.ResetPasswordActivity">


    <TextView
        android:id="@+id/TelTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1.8"
        android:paddingTop="25dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/android.branco"
        android:textSize="45sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.2"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="1">


        <!-- Label Reset de senha-->


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/esqueceu_a_senha"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/esqueceu_senha_msg"
            android:textColor="@android:color/white"

            android:textSize="16dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="30dp"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton

            android:id="@+id/botao_reset_senha_reset"
            style="@style/Botao.matchParentAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="Reset de senha">

        </android.support.v7.widget.AppCompatButton>




    </LinearLayout>

</LinearLayout>