<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/margemPaddingBottom"
    android:layout_marginLeft="@dimen/margemPaddingLeft"
    android:layout_marginRight="@dimen/margemPaddingRigth"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titular_da_solucao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagem_card"
            android:layout_toRightOf="@+id/por"
            android:layout_marginLeft="@dimen/espaco_de_4"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginTop="@dimen/espaco_de_4"
            android:textColor="@color/android.preto"
            android:text="Gleisson Nascimento "
            />

        <TextView
            android:id="@+id/dataSolucaoes_card"
            android:layout_below="@+id/titular_da_solucao"
            android:layout_toRightOf="@+id/por"
            android:layout_marginLeft="@dimen/espaco_de_8"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginTop="@dimen/espaco_de_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="26/11/16--------------------"
            />



        <TextView
            android:id="@+id/por"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginTop="@dimen/espaco_de_4"
            android:textColor="@color/android.cinzaEscuro"
            android:text="Por "
            android:layout_below="@+id/imagem_card"
         />

        <ImageView
            android:id="@+id/imagem_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_image_height"
            android:src="@drawable/chipcard"
            android:layout_marginLeft="@dimen/espaco_de_8"
            android:layout_marginRight="@dimen/espaco_de_8"
            android:layout_marginTop="@dimen/espaco_de_8"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/titulo_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_alignBottom="@id/imagem_card"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/android.branco"
            android:textSize="@dimen/article_titles"
            android:text="@string/item_desc"
            android:layout_alignStart="@+id/por"/>

        <LinearLayout
            android:id="@+id/layout_curtir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/espaco_de_8"
            android:layout_marginTop="@dimen/espaco_de_4"
            android:layout_marginLeft="@dimen/espaco_de_8"
            android:layout_marginRight="@dimen/espaco_de_8"
            android:orientation="horizontal"
            android:layout_below="@+id/dataSolucaoes_card"
            android:layout_alignParentStart="true">


            <ImageButton
                android:id="@+id/button_curtir"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/cards_button_height"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/curtir_paddin15"/>

            <TextView
                android:id="@+id/numero_curtidas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/numeroCurtidas"
                android:textColor="@color/android.preto"/>

            <ImageButton
                android:id="@+id/button_nao_curtir"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cards_button_height"
                android:layout_marginTop="4dp"
                app:srcCompat="@mipmap/nao_curtir_padding15"/>


            <TextView
                android:id="@+id/text_nao_curtir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/numeroNaoCurtidas"
                android:textColor="@color/android.preto"/>

        </LinearLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>